[FIX] exit icon, wrong color

--- a/frontend/src/styles/navBar.scss
+++ b/frontend/src/styles/navBar.scss
@@ -20,7 +20,8 @@
         position: absolute;
         top: 1rem;
         right: 1rem;
-        width: 2.5rem;
+        width: 1.5rem;
+        filter: invert(1);
     }
     
     &-title {
